--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "format": "prettier --write src/**/*.js"
+    "format": "prettier --write src/**/*.js",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.js": ["eslint", "prettier --write"]
   },
   "eslintConfig": {
     "extends": [
